Change password, tran details and giftcard brands

--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -69,13 +69,12 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true"
-            android:fitsSystemWindows="true">
+            android:layout_height="match_parent">
 
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_above="@+id/cvSave"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:paddingEnd="@dimen/_21sdp"
                 android:scrollbars="none">
@@ -85,6 +84,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:orientation="vertical">
+
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/currentPassTIL"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -93,10 +93,10 @@
                         android:layout_below="@+id/tvPasswordInfo"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginBottom="@dimen/_20sdp"
-                        android:hint="Current Password"
-                        android:visibility="gone"
                         android:clickable="false"
+                        android:hint="Current Password"
                         android:textColorHint="@color/primary_black"
+                        android:visibility="gone"
                         app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                         app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                         app:boxCornerRadiusTopEnd="@dimen/_10sdp"
@@ -112,21 +112,22 @@
                             android:id="@+id/currentPassET"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="creditCardSecurityCode"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
+                            android:editable="false"
+                            android:enabled="false"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionDone"
                             android:maxLength="12"
                             android:maxLines="1"
-                            android:editable="false"
-                            android:enabled="false"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                             android:singleLine="true"
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
-                            android:textSize="@dimen/_12ssp"
-                            android:autofillHints="creditCardSecurityCode"/>
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
+
                     <RelativeLayout
                         android:id="@+id/layoutPwd"
                         android:layout_width="match_parent"
@@ -163,8 +164,7 @@
                                 android:textColor="@color/text_color"
                                 android:textColorHint="@color/light_gray"
                                 android:textCursorDrawable="@drawable/cursor_color"
-                                android:textSize="@dimen/_12ssp"
-                                />
+                                android:textSize="@dimen/_12ssp" />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
@@ -205,6 +205,7 @@
                         </LinearLayout>
 
                     </RelativeLayout>
+
                     <LinearLayout
                         android:id="@+id/oldnewMatchTV"
                         android:layout_width="match_parent"
@@ -223,9 +224,9 @@
                             android:id="@+id/ssnErrorTV"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="New password should not match with Old password"
                             android:layout_marginStart="@dimen/_5sdp"
                             android:fontFamily="@font/opensans_regular"
+                            android:text="New password should not match with Old password"
                             android:textColor="@color/error_red"
                             android:textSize="11sp" />
                     </LinearLayout>
@@ -276,31 +277,32 @@
                             android:singleLine="true"
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
-                            android:textSize="@dimen/_12ssp"
-                            />
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/cvSave"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/_45sdp"
-                        android:layout_marginTop="@dimen/_250sdp"
-                        android:layout_marginBottom="@dimen/_27sdp"
-                        app:cardBackgroundColor="@color/inactive_color"
-                        app:cardCornerRadius="@dimen/_22sdp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:fontFamily="@font/opensans_bold"
-                            android:text="Save"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_12ssp" />
-                    </androidx.cardview.widget.CardView>
                 </LinearLayout>
             </ScrollView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cvSave"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_45sdp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="@dimen/_21sdp"
+                android:layout_marginBottom="@dimen/_27sdp"
+                app:cardBackgroundColor="@color/inactive_color"
+                app:cardCornerRadius="@dimen/_22sdp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="Save"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12ssp" />
+            </androidx.cardview.widget.CardView>
 
         </RelativeLayout>
 
