Business Profile -[Change :Email,Phone,Address].

--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -650,6 +650,7 @@
                     android:focusable="false"
                     android:fontFamily="@font/opensans_semibold"
                     android:imeOptions="actionNext"
+                    android:text="Shiva Siddagoni"
                     android:importantForAutofill="no"
                     android:inputType="textEmailAddress|textNoSuggestions"
                     android:maxLines="1"
