--- a/app/src/main/res/layout/activity_edit_email.xml
+++ b/app/src/main/res/layout/activity_edit_email.xml
@@ -12,6 +12,7 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/editEmailSV"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="match_parent">
 
         <LinearLayout
@@ -202,6 +203,7 @@
         android:layout_marginLeft="@dimen/_21sdp"
         android:layout_marginRight="@dimen/_21sdp"
         android:layout_marginBottom="@dimen/_26sdp"
+        android:visibility="visible"
         app:cardBackgroundColor="@color/inactive_color"
         app:cardCornerRadius="@dimen/_22sdp">
 
@@ -215,5 +217,173 @@
             android:textColor="@color/white"
             android:textSize="@dimen/_12ssp" />
     </androidx.cardview.widget.CardView>
+
+
+
+
+        <LinearLayout
+            android:id="@+id/b_topLL"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#f2f4f5"
+            android:visibility="gone"
+            android:layout_alignParentTop="true"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:background="@drawable/down_radius_payrequest"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/_21sdp"
+                android:paddingTop="@dimen/_45sdp"
+                android:paddingEnd="@dimen/_21sdp"
+                android:paddingBottom="@dimen/_11sdp">
+
+                <LinearLayout
+                    android:id="@+id/b_editEmailCloseLL"
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_back" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_14sdp"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="Edit Email"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_16ssp" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/_11sdp"
+                android:layout_marginTop="@dimen/_11sdp"
+                android:layout_marginEnd="@dimen/_11sdp"
+                android:background="@drawable/round_corner"
+                android:orientation="vertical">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/b_newEmailTIL"
+                    style="@style/TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_30sdp"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    android:hint="Enter New Email"
+                    android:textColorHint="@color/black"
+                    app:boxStrokeColor="@color/primary_green"
+                    app:errorTextColor="@color/error_red"
+                    app:expandedHintEnabled="false"
+                    app:hintTextColor="@color/primary_green">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/b_newEmailET"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:autofillHints="creditCardSecurityCode"
+                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
+                        android:fontFamily="@font/opensans_semibold"
+                        android:hint="New Email"
+                        android:imeOptions="actionDone"
+                        android:importantForAutofill="no"
+                        android:inputType="textEmailAddress|textNoSuggestions"
+                        android:maxLines="1"
+                        android:padding="@dimen/_14sdp"
+                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                        android:singleLine="true"
+                        android:textColor="@color/text_color"
+                        android:textColorHint="@color/light_gray"
+                        android:textCursorDrawable="@drawable/cursor_color"
+                        android:textSize="@dimen/_12ssp" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <LinearLayout
+                    android:id="@+id/b_newEmailErrorLL"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:layout_width="@dimen/_12sdp"
+                        android:layout_height="@dimen/_12sdp"
+                        android:src="@drawable/ic_erro" />
+
+                    <TextView
+                        android:id="@+id/b_newEmailErrorTV"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_10sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text=""
+                        android:textColor="@color/error_red"
+                        android:textSize="@dimen/_10ssp" />
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_17sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:gravity="center"
+                    android:text="Don't have access"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/b_contactUsTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:gravity="center"
+                    android:text="@string/contact_us"
+                    android:textColor="@color/primary_color"
+                    android:textSize="@dimen/_12ssp"
+                    android:visibility="gone" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:id="@+id/b_saveEmailCV"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="@dimen/_43sdp"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_marginLeft="@dimen/_21sdp"-->
+<!--        android:layout_marginRight="@dimen/_21sdp"-->
+<!--        android:layout_marginBottom="@dimen/_26sdp"-->
+<!--        android:visibility="visible"-->
+<!--        app:cardBackgroundColor="@color/inactive_color"-->
+<!--        app:cardCornerRadius="@dimen/_22sdp">-->
+
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:fontFamily="@font/opensans_bold"-->
+<!--            android:gravity="center"-->
+<!--            android:text="Save"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="@dimen/_12ssp" />-->
+<!--    </androidx.cardview.widget.CardView>-->
 
 </RelativeLayout>
