--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -750,6 +750,18 @@
 
                 </androidx.cardview.widget.CardView>
 
+                <TextView
+                    android:id="@+id/tvVersion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:layout_marginBottom="@dimen/_11sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="Version 2.0"
+                    android:textAlignment="center"
+                    android:textColor="@color/xdark_gray"
+                    android:textSize="@dimen/_11ssp" />
+
             </LinearLayout>
 
         </ScrollView>
