--- a/app/src/main/res/layout/activity_business_profile.xml
+++ b/app/src/main/res/layout/activity_business_profile.xml
@@ -425,7 +425,7 @@
                             android:background="@color/viewcolor" />
 
                         <LinearLayout
-                            android:id="@+id/PaymentMethodsLL"
+                            android:id="@+id/paymentMethodsLL"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
