--- a/app/src/main/res/layout/activity_business_profile.xml
+++ b/app/src/main/res/layout/activity_business_profile.xml
@@ -27,7 +27,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/bpbackBtn"
+                    android:id="@+id/b_backBtn"
                     android:layout_width="@dimen/_30sdp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_21sdp"
@@ -61,21 +61,19 @@
                         android:weightSum="2">
 
                         <TextView
-                            android:id="@+id/NameTV"
+                            android:id="@+id/b_nameTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_bold"
-                            android:text="@string/fire_bbq"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_14ssp" />
 
                         <TextView
-                            android:id="@+id/AccountIDTV"
+                            android:id="@+id/b_accountIDTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_6sdp"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="@string/account_id"
                             android:textColor="@color/xdark_gray"
                             android:textSize="@dimen/_10ssp" />
 
@@ -95,22 +93,19 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-                                android:id="@+id/tvACStatus"
+                                android:id="@+id/b_tvACStatus"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="5dp"
                                 android:layout_marginTop="@dimen/_6sdp"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:text="@string/active"
-                                android:textColor="@color/active_green"
                                 android:textSize="@dimen/_11ssp" />
 
                             <androidx.cardview.widget.CardView
-                                android:id="@+id/statusDotCV"
+                                android:id="@+id/b_statusDotCV"
                                 android:layout_width="@dimen/_8sdp"
                                 android:layout_height="@dimen/_8sdp"
                                 android:layout_marginTop="@dimen/_2sdp"
-                                app:cardBackgroundColor="@color/active_green"
                                 app:cardCornerRadius="@dimen/_4sdp" />
                         </LinearLayout>
 
@@ -136,7 +131,7 @@
                             app:layout_constraintTop_toTopOf="parent">
 
                             <androidx.cardview.widget.CardView
-                                android:id="@+id/userProfileCV"
+                                android:id="@+id/business_userProfileCV"
                                 android:layout_width="@dimen/_49sdp"
                                 android:layout_height="@dimen/_49sdp"
                                 android:layout_alignParentRight="true"
@@ -148,12 +143,22 @@
                                 app:layout_constraintTop_toTopOf="parent">
 
                                 <ImageView
-                                    android:id="@+id/profileIV"
+                                    android:id="@+id/b_profileIV"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:scaleType="fitXY"
                                     android:src="@drawable/ic_profile_male_user"
                                     android:visibility="visible" />
+                                <TextView
+                                    android:id="@+id/b_imageTextTV"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:fontFamily="@font/opensans_bold"
+                                    android:text="VT"
+                                    android:textColor="@color/primary_black"
+                                    android:textSize="@dimen/_20sdp"
+                                    android:visibility="gone" />
 
                             </androidx.cardview.widget.CardView>
                         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -676,7 +681,7 @@
                                 android:layout_gravity="center">
 
                                 <TextView
-                                    android:id="@+id/tvBMSetting"
+                                    android:id="@+id/b_tvBMSetting"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginEnd="170dp"
@@ -756,7 +761,7 @@
                             android:background="@color/viewcolor" />
 
                         <LinearLayout
-                            android:id="@+id/cpChangePassword"
+                            android:id="@+id/b_cpChangePassword"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
@@ -804,7 +809,7 @@
                     android:layout_marginTop="@dimen/_35sdp"
                     android:layout_marginEnd="@dimen/_21sdp"
                     android:layout_marginBottom="@dimen/_52sdp"
-                    app:cardCornerRadius="@dimen/_33sdp">
+                    app:cardCornerRadius="@dimen/_21sdp">
 
                     <TextView
                         android:layout_width="wrap_content"
