--- a/app/src/main/res/layout/activity_business_receive_payment.xml
+++ b/app/src/main/res/layout/activity_business_receive_payment.xml
@@ -13,21 +13,38 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bottomradius"
         android:orientation="vertical"
-        android:paddingLeft="@dimen/_21sdp"
-        android:paddingBottom="@dimen/_25sdp"
+        android:layout_alignParentTop="true"
+        android:paddingStart="@dimen/_21sdp"
+        android:paddingEnd="@dimen/_1sdp"
         android:visibility="visible">
 
-        <ImageView
-            android:id="@+id/imgCloseSM"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/receivePaymentLL"
+            android:layout_width="@dimen/_30sdp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_45sdp"
-            android:src="@drawable/ic_close" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_close" />
+        </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_14sdp"
+            android:text="@string/receive_payment"
+            android:textSize="@dimen/_16ssp"
+            android:fontFamily="@font/opensans_bold"
+            android:layout_marginBottom="@dimen/_11sdp"
+            android:textColor="@color/black"/>
+
     </LinearLayout>
     <ScrollView
-        android:id="@+id/scanmeScrlView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/layoutHead"
         android:fillViewport="true"
         android:scrollbars="none"
         android:visibility="visible">
@@ -322,7 +339,7 @@
         </RelativeLayout>
     </ScrollView>
     <LinearLayout
-        android:id="@+id/saveToAlbumLL"
+        android:id="@+id/b_saveToAlbumLL"
         android:layout_width="@dimen/_286sdp"
         android:layout_height="wrap_content"
         android:background="@color/primary_green"
