--- a/app/src/main/res/layout/activity_all_done_success.xml
+++ b/app/src/main/res/layout/activity_all_done_success.xml
@@ -34,6 +34,7 @@
                 android:textSize="@dimen/_16ssp" />
 
             <TextView
+                android:id="@+id/tvMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_regular"
