--- a/app/src/main/res/layout/activity_add_external_bank_acc.xml
+++ b/app/src/main/res/layout/activity_add_external_bank_acc.xml
@@ -21,13 +21,13 @@
                 android:id="@+id/lyExternalClose"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="@dimen/_40sdp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="@dimen/_13sdp"
+                    android:layout_height="wrap_content"
                     android:src="@drawable/ic_chevron_left" />
             </LinearLayout>
 
