--- a/app/src/main/res/layout/activity_company_additional_documents.xml
+++ b/app/src/main/res/layout/activity_company_additional_documents.xml
@@ -1,247 +1,243 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none"
-        >
+        android:scrollbars="none">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingLeft="@dimen/_21sdp"
-            android:paddingRight="@dimen/_21sdp"
-            >
+            android:paddingRight="@dimen/_21sdp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="@dimen/_44sdp"
-                android:layout_marginBottom="@dimen/_18sdp">
+                android:layout_marginBottom="@dimen/_18sdp"
+                android:orientation="horizontal">
+
                 <ImageView
                     android:id="@+id/back2address2IV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_x"
                     android:layout_marginRight="@dimen/_10sdp"
-                    />
+                    android:src="@drawable/ic_x" />
+
                 <View
                     android:layout_width="@dimen/_70sdp"
                     android:layout_height="@dimen/_3sdp"
-                    android:layout_weight="1"
                     android:layout_marginTop="@dimen/_6sdp"
-                    android:background="@drawable/view_light_color"
                     android:layout_marginRight="@dimen/_5sdp"
-                    />
+                    android:layout_weight="1"
+                    android:background="@drawable/view_light_color" />
+
                 <View
                     android:layout_width="@dimen/_70sdp"
                     android:layout_height="@dimen/_3sdp"
-                    android:layout_weight="1"
                     android:layout_marginTop="@dimen/_6sdp"
-                    android:background="@drawable/view_light_color"
                     android:layout_marginRight="@dimen/_5sdp"
-                    />
+                    android:layout_weight="1"
+                    android:background="@drawable/view_light_color" />
+
                 <View
                     android:layout_width="@dimen/_70sdp"
                     android:layout_height="@dimen/_3sdp"
-                    android:layout_weight="1"
                     android:layout_marginTop="@dimen/_6sdp"
-                    android:background="@drawable/view_primary_gren_color"
                     android:layout_marginRight="@dimen/_5sdp"
-                    />
+                    android:layout_weight="1"
+                    android:background="@drawable/view_primary_gren_color" />
             </LinearLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/_16ssp"
-                android:textColor="@color/black"
                 android:layout_marginBottom="@dimen/_21sdp"
                 android:fontFamily="@font/opensans_bold"
                 android:text="Company Information"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16ssp"
 
                 />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Additional Documents "
-                android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/opensans_semibold"
-                android:textColor="@color/primary_green"
                 android:layout_marginBottom="@dimen/_11sdp"
-                />
+                android:fontFamily="@font/opensans_semibold"
+                android:text="Additional Documents "
+                android:textColor="@color/primary_green"
+                android:textSize="@dimen/_12ssp" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_white_color_light_border"
-                    android:paddingTop="@dimen/_13sdp"
-                    android:paddingBottom="@dimen/_14sdp"
-                    android:paddingLeft="@dimen/_8sdp"
-                    android:layout_marginBottom="@dimen/_14sdp"
-                    >
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_upload"
-                        android:layout_marginRight="@dimen/_6sdp"
-                        />
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_weight="1"
-                        android:layout_marginLeft="@dimen/_5sdp"
-                        >
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Uploaded Articles of Incorporation"
-                        android:textSize="@dimen/_10ssp"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:textColor="@color/primary_color"
-                        android:layout_marginBottom="@dimen/_1sdp"
-                        />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Uploaded on 6/11/2020"
-                            android:textSize="@dimen/_8ssp"
-                            android:fontFamily="@font/opensans_regular"
-                            android:textColor="@color/dark_grey"
-                            />
-
-                </LinearLayout>
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2.9"
-                        android:layout_marginTop="@dimen/_2sdp"
-                        android:src="@drawable/ic_complete"
-                        android:gravity="right"
-
-                        />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_white_color_light_border"
-                    android:paddingTop="@dimen/_13sdp"
-                    android:layout_weight="1"
-                    android:paddingBottom="@dimen/_14sdp"
-                    android:paddingLeft="@dimen/_8sdp"
-                    android:layout_marginBottom="@dimen/_14sdp"
-                >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_14sdp"
+                android:background="@drawable/bg_white_color_light_border"
+                android:paddingLeft="@dimen/_8sdp"
+                android:paddingTop="@dimen/_13sdp"
+                android:paddingBottom="@dimen/_14sdp">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_upload"
                     android:layout_marginRight="@dimen/_6sdp"
-                    />
+                    android:src="@drawable/ic_upload" />
+
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2.6"
-                    android:orientation="vertical"
                     android:layout_marginLeft="@dimen/_5sdp"
-                    >
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Uploaded EIN Letter"
-                        android:textSize="@dimen/_10ssp"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:textColor="@color/primary_color"
                         android:layout_marginBottom="@dimen/_1sdp"
-                        />
+                        android:fontFamily="@font/opensans_semibold"
+                        android:text="Uploaded Articles of Incorporation"
+                        android:textColor="@color/primary_color"
+                        android:textSize="@dimen/_10ssp" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Uploaded on 6/11/2020"
-                        android:textSize="@dimen/_8ssp"
                         android:fontFamily="@font/opensans_regular"
+                        android:text="Uploaded on 6/11/2020"
                         android:textColor="@color/dark_grey"
-                        />
+                        android:textSize="@dimen/_8ssp" />
 
                 </LinearLayout>
+
                 <ImageView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_marginTop="@dimen/_2sdp"
-                    android:src="@drawable/ic_complete"
+                    android:layout_weight="2.9"
                     android:gravity="right"
+                    android:src="@drawable/ic_complete"
+
                     />
             </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_white_color_light_border"
-                    android:paddingTop="@dimen/_13sdp"
-                    android:paddingBottom="@dimen/_14sdp"
-                    android:paddingLeft="@dimen/_8sdp"
-                    android:layout_marginBottom="@dimen/_14sdp"
-                >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_14sdp"
+                android:layout_weight="1"
+                android:background="@drawable/bg_white_color_light_border"
+                android:paddingLeft="@dimen/_8sdp"
+                android:paddingTop="@dimen/_13sdp"
+                android:paddingBottom="@dimen/_14sdp">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_upload"
-                    android:layout_marginRight="@dimen/_10sdp"
-                    />
+                    android:layout_marginRight="@dimen/_6sdp"
+                    android:src="@drawable/ic_upload" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:layout_weight="2.6"
+                    android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/bottomTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Uploaded W-9 Form"
-                        android:textSize="@dimen/_10ssp"
-                        android:layout_marginTop="@dimen/_6sdp"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:textColor="@color/light_gray_black"
                         android:layout_marginBottom="@dimen/_1sdp"
-                        />
+                        android:fontFamily="@font/opensans_semibold"
+                        android:text="Uploaded EIN Letter"
+                        android:textColor="@color/primary_color"
+                        android:textSize="@dimen/_10ssp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="Uploaded on 6/11/2020"
+                        android:textColor="@color/dark_grey"
+                        android:textSize="@dimen/_8ssp" />
+
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:src="@drawable/ic_complete" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_14sdp"
+                android:background="@drawable/bg_white_color_light_border"
+                android:paddingLeft="@dimen/_8sdp"
+                android:paddingTop="@dimen/_13sdp"
+                android:paddingBottom="@dimen/_14sdp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/_10sdp"
+                    android:src="@drawable/ic_upload" />
+
+                <TextView
+                    android:id="@+id/bottomTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    android:layout_marginBottom="@dimen/_1sdp"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="Uploaded W-9 Form"
+                    android:textColor="@color/light_gray_black"
+                    android:textSize="@dimen/_10ssp" />
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/DoneCV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="@dimen/_30sdp"
                 android:layout_marginTop="@dimen/_200sdp"
-                app:cardBackgroundColor="@color/inactive_color"
                 android:layout_marginBottom="@dimen/_2sdp"
-                >
+                app:cardBackgroundColor="@color/inactive_color"
+                app:cardCornerRadius="@dimen/_30sdp">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Done"
                     android:layout_gravity="center"
                     android:layout_marginTop="@dimen/_13sdp"
                     android:layout_marginBottom="@dimen/_13sdp"
                     android:fontFamily="@font/opensans_bold"
+                    android:text="Done"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp"
-                    />
+                    android:textSize="@dimen/_12ssp" />
             </androidx.cardview.widget.CardView>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Saved automatically"
-                android:textSize="@dimen/_11ssp"
-                android:textColor="@color/dark_grey"
-                android:fontFamily="@font/opensans_regular"
-                android:layout_marginTop="@dimen/_5sdp"
                 android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginBottom="@dimen/_27sdp"
-                />
+                android:fontFamily="@font/opensans_regular"
+                android:text="Saved automatically"
+                android:textColor="@color/dark_grey"
+                android:textSize="@dimen/_11ssp" />
 
         </LinearLayout>
     </ScrollView>
