--- a/app/src/main/res/layout/activity_ssnoutline_box_number_edit_text.xml
+++ b/app/src/main/res/layout/activity_ssnoutline_box_number_edit_text.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/ssnhintdHolderLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
         android:background="@drawable/outline_box_unfocused"
         android:gravity="center"
-        android:layout_marginTop="@dimen/_10sdp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -19,28 +19,25 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_25sdp"
-            android:gravity="center"
-            android:layout_marginStart="@dimen/_15sdp">
+            android:layout_marginStart="@dimen/_15sdp"
+            android:gravity="center">
 
             <TextView
+                android:id="@+id/ssnType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:fontFamily="@font/opensans_semibold"
                 android:text="SSN"
                 android:textColor="@color/primary_black"
-                android:layout_marginStart="5dp"
-                android:fontFamily="@font/opensans_regular"
-                android:textSize="@dimen/_12ssp"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_down"
-                android:layout_marginStart="@dimen/_20sdp"/>
+                android:textSize="@dimen/_12ssp" />
+
             <View
                 android:layout_width="1.5dp"
                 android:layout_height="wrap_content"
-                android:background="@color/light_gray"
                 android:layout_marginStart="@dimen/_5sdp"
-                />
+                android:background="@color/light_gray" />
         </LinearLayout>
 
         <com.greenbox.coyni.utils.MaskEditText.widget.MaskEditText
@@ -48,19 +45,19 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_gravity="center"
-            android:inputType="number|textNoSuggestions"
-            android:padding="14dp"
-            android:hint="•••-•••-••••"
             android:background="@android:color/transparent"
+            android:digits="0123456789"
+            android:fontFamily="@font/opensans_semibold"
+            android:hint="•••-•••-••••"
+            android:imeOptions="actionNext"
+            android:inputType="number|textNoSuggestions"
+            android:maxLines="1"
+            android:padding="14dp"
+            android:singleLine="true"
             android:textColor="@color/primary_black"
             android:textColorHint="@color/light_gray"
-            android:textSize="@dimen/_12ssp"
-            app:mask="__-_______"
-            android:singleLine="true"
-            android:maxLines="1"
             android:textCursorDrawable="@drawable/cursor_color"
-            android:fontFamily="@font/opensans_semibold"
-            android:digits="0123456789"
-            android:imeOptions="actionNext"/>
+            android:textSize="@dimen/_12ssp"
+            app:mask="__-_______" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
