--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -85,6 +85,7 @@
     <color name="balance">#404040</color>
 
     <color name="notif_delete_bg">#FCE9E8</color>
+    <color name="idve_complete">#daeced</color>
 
 
 </resources>
